# transtui

./: .gitignore  Cargo.toml  en_US.json  en_US.toml
locales/en/: app.toml
locales/pt/: app.toml
src/: app.rs  file_operations.rs  handlers.rs  localization.rs  main.rs  main_backup.rs  main_comBusca.rs  ui.rs
