[package]
name = "transtui"
version = "0.1.0"
edition = "2024"
include = [
    "src/**/*",
    "locales/**/*",  # Adicione esta linha
]

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
tui = { version = "0.19", features = ["crossterm"] }
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
toml = "0.7"
chrono = "0.4"
