[package]
name = "transtui"
version = "0.3.2"
edition = "2024"
include = [
    "src/**/*",
    "locales/**/*",  # Adicione esta linha
]

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
tui = { version = "0.19", features = ["crossterm"] }
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
toml = "0.8.21"
chrono = "0.4"

# Adding crossterm v0.27.0 (available: v0.29.0)
#      Adding toml v0.7.8 (available: v0.8.21)
